# product-texts

./: README.md
capella/: README-internal.txt
capella/tools/: README.txt
couchbase-server/: CMakeLists.txt
couchbase-server/admin-tools/: README.txt
couchbase-server/license/: ce-license-no-newlines.txt  ce-license.html  ce-license.txt  ee-license-no-newlines.txt  ee-license.html  ee-license.txt
couchbase-server/readme/: README.txt
mobile/couchbase-lite/license/: LICENSE_community.txt  LICENSE_enterprise.txt
mobile/sync_gateway/license/: LICENSE_community.rtf  LICENSE_enterprise.rtf  LICENSE_enterprise.txt
